[tool.poetry]
name = "ex2mcmc"
version = "0.0.2"
description = "Local-Global MCMC kernels: the bost of both worlds (NeurIPS 2022)"
authors = ["Sergey Samsonov", "Evgeny Lagutin", "Marylou Gabrié", "Alain Durmus", "Alexey Naumov", "Eric Moulines"]
readme = "README.md"
repository = "http://github.com/svsamsonov/ex2mcmc_new.git"
documentation = "TBD"
license = "MIT"

[tool.black]
target-version = ["py38"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | thirdparty
)/
'''

[tool.poetry.dependencies]
python = "~3.8"
torch-mimicry = {git = "https://github.com/kwotsin/mimicry.git", rev = "a7fda06c4aff1e6af8dc4c4a35ed6636e434c766"}
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
flake8 = "5.0.4"
ipykernel = "^6.21.3"
ipython = "^8.11.0"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
ruamel-yaml = "^0.17.21"
munch = "^2.5.0"
pre-commit = "^3.1.1"
pyro-ppl = "^1.8.4"
pot = "^0.9.0"
easydict = "^1.10"
jaxlib = "^0.4.7"
jax = "^0.4.8"
gdown = "^4.7.1"
wandb = "^0.14.2"
vulture = "^2.7"
docker = "^6.0.1"
toml = "^0.10.2"

[tool.isort]
src_paths = ["."]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
lines_after_imports = 2
skip_glob = 'thirdparty'
known_third_party = ["PIL", "gdown", "imageio", "matplotlib", "numpy", "ruamel", "scipy", "seaborn", "skimage", "sklearn", "tensorflow", "torch", "torchvision",  "torch_mimicry"]

[tool.flake8]
min_python_version = "3.8.0"
max-line-length = 88
# ban-relative-imports = true
# flake8-use-fstring: https://github.com/MichaelKim0407/flake8-use-fstring#--percent-greedy-and---format-greedy
format-greedy = 1
inline-quotes = "double"
# Allow omission of a return type hint for __init__ if at least one argument is annotated
# used by flake8-annotations
mypy-init-return = true
#enable-extensions = TC, TC2
#type-checking-exempt-modules = typing, typing-extensions
eradicate-whitelist-extend = "^-.*;"
extend-ignore = """
    # E203: Whitespace before ':' (pycqa/pycodestyle#373)
    E203,
    # SIM106: Handle error-cases first
    SIM106,
    # ANN101: Missing type annotation for self in method
    ANN101,
    # ANN102: Missing type annotation for cls in classmethod
    ANN102,
    # E402: module level import not at top of file
    E402,
    """
#per-file-ignores =
    # F401: Module imported by unused (non-implicit modules)
    # TC002: Move third-party import '...' into a type-checking block
    #__init__.py:F401,TC002,
    # ANN201: Missing return type annotation for public function
    #tests/test_*:ANN201
    #tests/**/test_*:ANN201
extend-exclude = """
    # Frozen and not subject to change in this repo:
    thirdparty/*,
    # # External to the project's coding standards:
    """

[tool.vulture]
    exclude = ["*file*.py", "dir/"]
    ignore_decorators = ["@app.route", "@require_*"]
    ignore_names = ["visit_*", "do_*"]
    make_whitelist = true
    min_confidence = 80
    paths = ["ex2mcmc"]
    sort_by_size = true
    verbose = false #true